// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Accordion Snapshot Tests matches snapshot for borderless variant 1`] = `
<div>
  <div
    class=MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded Mui-expanded MuiAccordion-gutters !rounded-none css-hash-MuiPaper-root-MuiAccordion-root
  >
    <div
      aria-expanded="true"
      class=MuiButtonBase-root MuiAccordionSummary-root Mui-expanded MuiAccordionSummary-gutters select-text focus:bg-inherit focus:outline-none h-auto focus:rounded-lg focus-visible:ring css-hash-MuiButtonBase-root-MuiAccordionSummary-root
      role="button"
      tabindex="0"
    >
      <div
        class=MuiAccordionSummary-content Mui-expanded MuiAccordionSummary-contentGutters css-hash-MuiAccordionSummary-content
      >
        <div
          class="mr-3"
        >
          <div
            aria-label="Collapse"
            class=""
            data-mui-internal-clone-element="true"
          >
            <button
              class=MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-disableElevation button-icon-only min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
              data-test="open-charge"
              tabindex="-1"
              type="button"
            >
              <svg
                class="text-inherit size-4 min-w-4"
                data-test="chevron-down-filled/medium"
                fill="none"
                title="chevron-down-filled/medium"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.376 5.076c.12.05.23.125.324.218a1 1 0 0 1 .222 1.104 1 1 0 0 1-.222.328L9.056 10.56a1.495 1.495 0 0 1-2.117 0L3.3 6.726a1.002 1.002 0 0 1 0-1.432.997.997 0 0 1 .704-.291h3.994L11.992 5c.131 0 .261.026.383.076Z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </div>
        <div>
          Summary Text
        </div>
      </div>
    </div>
    <div
      class=MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-hash-MuiCollapse-root
      style="min-height: 0px;"
    >
      <div
        class=MuiCollapse-wrapper MuiCollapse-vertical css-hash-MuiCollapse-wrapper
      >
        <div
          class=MuiCollapse-wrapperInner MuiCollapse-vertical css-hash-MuiCollapse-wrapperInner
        >
          <div
            class="MuiAccordion-region"
            role="region"
          >
            <div
              class=MuiAccordionDetails-root flex flex-col mt-6 css-hash-MuiAccordionDetails-root
            >
              <div>
                Content Text
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion Snapshot Tests matches snapshot for closed card accordion 1`] = `
<div>
  <div
    class=MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters border border-solid border-grey-400 has-[:focus-visible]:ring css-hash-MuiPaper-root-MuiAccordion-root
  >
    <div
      aria-expanded="false"
      class=MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters select-text focus:bg-inherit focus:outline-none h-18 rounded-xl hover:bg-grey-100 active:bg-grey-200 css-hash-MuiButtonBase-root-MuiAccordionSummary-root
      role="button"
      tabindex="0"
    >
      <div
        class=MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-hash-MuiAccordionSummary-content
      >
        <div
          class="mr-3"
        >
          <div
            aria-label="Expand"
            class=""
            data-mui-internal-clone-element="true"
          >
            <button
              class=MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-disableElevation button-icon-only min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
              data-test="open-charge"
              tabindex="-1"
              type="button"
            >
              <svg
                class="text-inherit size-4 min-w-4"
                data-test="chevron-right-filled/medium"
                fill="none"
                title="chevron-right-filled/medium"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.7256 3.30037L10.5607 6.94427C10.842 7.22505 11 7.60566 11 8.0025C11 8.39933 10.842 8.77994 10.5607 9.06072L6.7256 12.6996C6.63234 12.7947 6.52097 12.8703 6.39802 12.9218C6.27507 12.9734 6.14303 13 6.00964 13C5.87625 13 5.7442 12.9734 5.62126 12.9218C5.49831 12.8703 5.38694 12.7947 5.29368 12.6996C5.10718 12.5126 5.0025 12.2596 5.0025 11.9958L5 8.0025V4.00669C5 3.87549 5.02594 3.74558 5.07633 3.62439C5.12672 3.50319 5.20058 3.39309 5.29368 3.30037C5.38694 3.20529 5.49831 3.12973 5.62126 3.07815C5.7442 3.02657 5.87625 3 6.00964 3C6.14303 3 6.27507 3.02657 6.39802 3.07815C6.52097 3.12973 6.63234 3.20529 6.7256 3.30037Z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </div>
        <div>
          Summary Text
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion Snapshot Tests matches snapshot for large size 1`] = `
<div>
  <div
    class=MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded Mui-expanded MuiAccordion-gutters border border-solid border-grey-400 has-[:focus-visible]:ring css-hash-MuiPaper-root-MuiAccordion-root
  >
    <div
      aria-expanded="true"
      class=MuiButtonBase-root MuiAccordionSummary-root Mui-expanded MuiAccordionSummary-gutters select-text focus:bg-inherit focus:outline-none h-23 rounded-t-xl hover:bg-grey-100 active:bg-grey-200 css-hash-MuiButtonBase-root-MuiAccordionSummary-root
      role="button"
      tabindex="0"
    >
      <div
        class=MuiAccordionSummary-content Mui-expanded MuiAccordionSummary-contentGutters css-hash-MuiAccordionSummary-content
      >
        <div
          class="mr-3"
        >
          <div
            aria-label="Collapse"
            class=""
            data-mui-internal-clone-element="true"
          >
            <button
              class=MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-disableElevation button-icon-only min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
              data-test="open-charge"
              tabindex="-1"
              type="button"
            >
              <svg
                class="text-inherit size-4 min-w-4"
                data-test="chevron-down-filled/medium"
                fill="none"
                title="chevron-down-filled/medium"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.376 5.076c.12.05.23.125.324.218a1 1 0 0 1 .222 1.104 1 1 0 0 1-.222.328L9.056 10.56a1.495 1.495 0 0 1-2.117 0L3.3 6.726a1.002 1.002 0 0 1 0-1.432.997.997 0 0 1 .704-.291h3.994L11.992 5c.131 0 .261.026.383.076Z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </div>
        <div>
          Summary Text
        </div>
      </div>
    </div>
    <div
      class=MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-hash-MuiCollapse-root
      style="min-height: 0px;"
    >
      <div
        class=MuiCollapse-wrapper MuiCollapse-vertical css-hash-MuiCollapse-wrapper
      >
        <div
          class=MuiCollapse-wrapperInner MuiCollapse-vertical css-hash-MuiCollapse-wrapperInner
        >
          <div
            class="MuiAccordion-region"
            role="region"
          >
            <div
              class=MuiAccordionDetails-root flex flex-col shadow-t p-8 css-hash-MuiAccordionDetails-root
            >
              <div>
                Content Text
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion Snapshot Tests matches snapshot for medium size 1`] = `
<div>
  <div
    class=MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded Mui-expanded MuiAccordion-gutters border border-solid border-grey-400 has-[:focus-visible]:ring css-hash-MuiPaper-root-MuiAccordion-root
  >
    <div
      aria-expanded="true"
      class=MuiButtonBase-root MuiAccordionSummary-root Mui-expanded MuiAccordionSummary-gutters select-text focus:bg-inherit focus:outline-none h-18 rounded-t-xl hover:bg-grey-100 active:bg-grey-200 css-hash-MuiButtonBase-root-MuiAccordionSummary-root
      role="button"
      tabindex="0"
    >
      <div
        class=MuiAccordionSummary-content Mui-expanded MuiAccordionSummary-contentGutters css-hash-MuiAccordionSummary-content
      >
        <div
          class="mr-3"
        >
          <div
            aria-label="Collapse"
            class=""
            data-mui-internal-clone-element="true"
          >
            <button
              class=MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-disableElevation button-icon-only min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
              data-test="open-charge"
              tabindex="-1"
              type="button"
            >
              <svg
                class="text-inherit size-4 min-w-4"
                data-test="chevron-down-filled/medium"
                fill="none"
                title="chevron-down-filled/medium"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.376 5.076c.12.05.23.125.324.218a1 1 0 0 1 .222 1.104 1 1 0 0 1-.222.328L9.056 10.56a1.495 1.495 0 0 1-2.117 0L3.3 6.726a1.002 1.002 0 0 1 0-1.432.997.997 0 0 1 .704-.291h3.994L11.992 5c.131 0 .261.026.383.076Z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </div>
        <div>
          Summary Text
        </div>
      </div>
    </div>
    <div
      class=MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-hash-MuiCollapse-root
      style="min-height: 0px;"
    >
      <div
        class=MuiCollapse-wrapper MuiCollapse-vertical css-hash-MuiCollapse-wrapper
      >
        <div
          class=MuiCollapse-wrapperInner MuiCollapse-vertical css-hash-MuiCollapse-wrapperInner
        >
          <div
            class="MuiAccordion-region"
            role="region"
          >
            <div
              class=MuiAccordionDetails-root flex flex-col shadow-t p-4 css-hash-MuiAccordionDetails-root
            >
              <div>
                Content Text
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion Snapshot Tests matches snapshot for open card accordion 1`] = `
<div>
  <div
    class=MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded Mui-expanded MuiAccordion-gutters border border-solid border-grey-400 has-[:focus-visible]:ring css-hash-MuiPaper-root-MuiAccordion-root
  >
    <div
      aria-expanded="true"
      class=MuiButtonBase-root MuiAccordionSummary-root Mui-expanded MuiAccordionSummary-gutters select-text focus:bg-inherit focus:outline-none h-18 rounded-t-xl hover:bg-grey-100 active:bg-grey-200 css-hash-MuiButtonBase-root-MuiAccordionSummary-root
      role="button"
      tabindex="0"
    >
      <div
        class=MuiAccordionSummary-content Mui-expanded MuiAccordionSummary-contentGutters css-hash-MuiAccordionSummary-content
      >
        <div
          class="mr-3"
        >
          <div
            aria-label="Collapse"
            class=""
            data-mui-internal-clone-element="true"
          >
            <button
              class=MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-disableElevation button-icon-only min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
              data-test="open-charge"
              tabindex="-1"
              type="button"
            >
              <svg
                class="text-inherit size-4 min-w-4"
                data-test="chevron-down-filled/medium"
                fill="none"
                title="chevron-down-filled/medium"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.376 5.076c.12.05.23.125.324.218a1 1 0 0 1 .222 1.104 1 1 0 0 1-.222.328L9.056 10.56a1.495 1.495 0 0 1-2.117 0L3.3 6.726a1.002 1.002 0 0 1 0-1.432.997.997 0 0 1 .704-.291h3.994L11.992 5c.131 0 .261.026.383.076Z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </div>
        <div>
          Summary Text
        </div>
      </div>
    </div>
    <div
      class=MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-hash-MuiCollapse-root
      style="min-height: 0px;"
    >
      <div
        class=MuiCollapse-wrapper MuiCollapse-vertical css-hash-MuiCollapse-wrapper
      >
        <div
          class=MuiCollapse-wrapperInner MuiCollapse-vertical css-hash-MuiCollapse-wrapperInner
        >
          <div
            class="MuiAccordion-region"
            role="region"
          >
            <div
              class=MuiAccordionDetails-root flex flex-col shadow-t p-4 css-hash-MuiAccordionDetails-root
            >
              <div>
                Content Text
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion Snapshot Tests matches snapshot with function children 1`] = `
<div>
  <div
    class=MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded Mui-expanded MuiAccordion-gutters border border-solid border-grey-400 has-[:focus-visible]:ring css-hash-MuiPaper-root-MuiAccordion-root
  >
    <div
      aria-expanded="true"
      class=MuiButtonBase-root MuiAccordionSummary-root Mui-expanded MuiAccordionSummary-gutters select-text focus:bg-inherit focus:outline-none h-18 rounded-t-xl hover:bg-grey-100 active:bg-grey-200 css-hash-MuiButtonBase-root-MuiAccordionSummary-root
      role="button"
      tabindex="0"
    >
      <div
        class=MuiAccordionSummary-content Mui-expanded MuiAccordionSummary-contentGutters css-hash-MuiAccordionSummary-content
      >
        <div
          class="mr-3"
        >
          <div
            aria-label="Collapse"
            class=""
            data-mui-internal-clone-element="true"
          >
            <button
              class=MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-disableElevation button-icon-only min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
              data-test="open-charge"
              tabindex="-1"
              type="button"
            >
              <svg
                class="text-inherit size-4 min-w-4"
                data-test="chevron-down-filled/medium"
                fill="none"
                title="chevron-down-filled/medium"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.376 5.076c.12.05.23.125.324.218a1 1 0 0 1 .222 1.104 1 1 0 0 1-.222.328L9.056 10.56a1.495 1.495 0 0 1-2.117 0L3.3 6.726a1.002 1.002 0 0 1 0-1.432.997.997 0 0 1 .704-.291h3.994L11.992 5c.131 0 .261.026.383.076Z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </div>
        <div>
          Summary Text
        </div>
      </div>
    </div>
    <div
      class=MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-hash-MuiCollapse-root
      style="min-height: 0px;"
    >
      <div
        class=MuiCollapse-wrapper MuiCollapse-vertical css-hash-MuiCollapse-wrapper
      >
        <div
          class=MuiCollapse-wrapperInner MuiCollapse-vertical css-hash-MuiCollapse-wrapperInner
        >
          <div
            class="MuiAccordion-region"
            role="region"
          >
            <div
              class=MuiAccordionDetails-root flex flex-col shadow-t p-4 css-hash-MuiAccordionDetails-root
            >
              <div>
                State: 
                Open
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion Snapshot Tests matches snapshot with noContentMargin 1`] = `
<div>
  <div
    class=MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded Mui-expanded MuiAccordion-gutters border border-solid border-grey-400 has-[:focus-visible]:ring css-hash-MuiPaper-root-MuiAccordion-root
  >
    <div
      aria-expanded="true"
      class=MuiButtonBase-root MuiAccordionSummary-root Mui-expanded MuiAccordionSummary-gutters select-text focus:bg-inherit focus:outline-none h-18 rounded-t-xl hover:bg-grey-100 active:bg-grey-200 css-hash-MuiButtonBase-root-MuiAccordionSummary-root
      role="button"
      tabindex="0"
    >
      <div
        class=MuiAccordionSummary-content Mui-expanded MuiAccordionSummary-contentGutters css-hash-MuiAccordionSummary-content
      >
        <div
          class="mr-3"
        >
          <div
            aria-label="Collapse"
            class=""
            data-mui-internal-clone-element="true"
          >
            <button
              class=MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-colorPrimary MuiButton-disableElevation button-icon-only min-w-[unset] whitespace-nowrap [&>svg]:cursor-pointer justify-center css-hash-MuiButtonBase-root-MuiButton-root
              data-test="open-charge"
              tabindex="-1"
              type="button"
            >
              <svg
                class="text-inherit size-4 min-w-4"
                data-test="chevron-down-filled/medium"
                fill="none"
                title="chevron-down-filled/medium"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.376 5.076c.12.05.23.125.324.218a1 1 0 0 1 .222 1.104 1 1 0 0 1-.222.328L9.056 10.56a1.495 1.495 0 0 1-2.117 0L3.3 6.726a1.002 1.002 0 0 1 0-1.432.997.997 0 0 1 .704-.291h3.994L11.992 5c.131 0 .261.026.383.076Z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </div>
        </div>
        <div>
          Summary Text
        </div>
      </div>
    </div>
    <div
      class=MuiCollapse-root MuiCollapse-vertical MuiCollapse-entered css-hash-MuiCollapse-root
      style="min-height: 0px;"
    >
      <div
        class=MuiCollapse-wrapper MuiCollapse-vertical css-hash-MuiCollapse-wrapper
      >
        <div
          class=MuiCollapse-wrapperInner MuiCollapse-vertical css-hash-MuiCollapse-wrapperInner
        >
          <div
            class="MuiAccordion-region"
            role="region"
          >
            <div
              class=MuiAccordionDetails-root flex flex-col shadow-t p-0 css-hash-MuiAccordionDetails-root
            >
              <div>
                Content Text
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
